updated the images for the PCmanager

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -70,18 +70,28 @@
 
 <div class="content-right scroller">
     <div class="img-container">
-        <img src="img/characterManager/character_manager_select_chacacter.png" 
-            alt="Image of select character view">    
-        <img src="img/characterManager/character_manager_character_stats.png" 
-            alt="image of character stats view">
-        <img src="img/characterManager/character_manager_character_stats_starfinder.png" 
-            alt="image of character stats view">
-        <img src="img/characterManager/character_manager_inventory.png" 
-            alt="image of character inventory view">
-        <img src="img/characterManager/character_manager_spellbook.png" 
-            alt="image of character spellbook view">
-        <img src="img/characterManager/character_manager_notes.png" 
-            alt="image of character notes view">
+        <img src="img/characterManager/character_stats.png" 
+            alt="D&D 5e character stats page">    
+        <img src="img/characterManager/character_stats_edit_character.png" 
+            alt="D&D 5e edit characater dialog window">
+        <img src="img/characterManager/character_stats_starfinder.png" 
+            alt="Starfinder character stats page">
+        <img src="img/characterManager/inventory.png" 
+            alt="character inventory page">
+        <img src="img/characterManager/inventory_add_item.png" 
+            alt="character inventory add item dialog window">
+        <img src="img/characterManager/new_character.png" 
+            alt="new D&D 5e character dialog window">
+        <img src="img/characterManager/new_starfinder_character.png"
+            alt="new Starfinder character dialog window">
+        <img src="img/characterManager/notes.png"
+            alt="character note book page">
+        <img src="img/characterManager/select_chacacter.png" 
+            alt="select character page">
+        <img src="img/characterManager/spellbook.png"
+            alt="character spell book page">
+        <img src="img/characterManager/spellbook_add_spell.png" 
+            alt="character spell book page add spell">
     </div>
 </div>
 
@@ -107,6 +117,11 @@
     <div class="row">
         <div class="current_image_container center">
             <span class="active-image">.</span> 
+            <span>.</span> 
+            <span>.</span>
+            <span>.</span> 
+            <span>.</span>
+            <span>.</span>
             <span>.</span> 
             <span>.</span>
             <span>.</span> 
