--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="content">
     <h1 class="Title">About Me!</h1>
     <p>
-       DandyDev (Kelsey)
+       Kelsey,
     </p>
     <p>
         Software developer by training, designer in practice.
