--- a/Mywork.html
+++ b/Mywork.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="scripts/jquery.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Kelsey's Portfolio | Character Manager</title>
 </head>
@@ -263,7 +263,7 @@
         <div>
             <h3>About</h3>
             <p>
-                
+
             </p>
         </div>
     </div>
