added images for painting app

--- a/Mywork.html
+++ b/Mywork.html
@@ -192,7 +192,7 @@
             </ul>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="img/PaintApp/Image_00.png" alt="">
         </div>
         <div>
             <h3>About</h3>
