added other project page links to the navigation

--- a/SpaceInvadersClone.html
+++ b/SpaceInvadersClone.html
@@ -26,7 +26,12 @@
                         <li><a href="Character_Manager.html">PCManager</a></li>
                         <li><a href="FarmKillPig.html">FKP</a></li>
                         <li><a href="Learn_Unity.html">Learn Unity</a></li>
-                        <li class="active"><a href="InventoryManager.html">Inventory Manager</a></li>
+                        <li><a href="InventoryManager.html">Inventory Manager</a></li>
+                        <li><a href="PaintApp.html">Painting App</a></li>
+                        <li><a href="PongClone.html">Pong Clone</a></li>
+                        <li><a href="AIPython3.html">AI in Python3</a></li>
+                        <li class="active"><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
+                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
                     </ul>
                 </div>
                </div>
