--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -27,6 +27,11 @@
                         <li class="active"><a href="FarmKillPig.html">FKP</a></li>
                         <li><a href="Learn_Unity.html">Learn Unity</a></li>
                         <li><a href="InventoryManager.html">Inventory Manager</a></li>
+                        <li><a href="PaintApp.html">Painting App</a></li>
+                        <li><a href="PongClone.html">Pong Clone</a></li>
+                        <li><a href="AIPython3.html">AI in Python3</a></li>
+                        <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
+                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
                     </ul>
                 </div>
                </div>
