--- a/Mywork.html
+++ b/Mywork.html
@@ -16,7 +16,7 @@
         <ul id="menu">
             <li><a href="index.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li class="active"><a href="Mywork.html">My Work</a></li>
+            <li class="active"><a href="Mywork.html">A Quick Look</a></li>
             <li>
                <div class="dropdown">
                 <span>Projects</span>
