--- a/SpaceInvadersClone.html
+++ b/SpaceInvadersClone.html
@@ -16,7 +16,7 @@
         <ul id="menu">
             <li><a href="index.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="Mywork.html">My Work</a></li>
+            <li><a href="Mywork.html">A Quick Look At My Work</a></li>
             <li  class="active">
                <div class="dropdown">
                 <span>Projects</span>
