--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul id="menu">
             <li class="active"><a href="index.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="Mywork.html">My Work</a></li>
+            <li><a href="Mywork.html">A Quick Look At My Work</a></li>
             <li>
                <div class="dropdown">
                 <span>Projects</span>
