updated the name of myFunction to dropDownFunction

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -36,7 +36,7 @@
                 </div>
                </div>
                <li class="icon">
-                <a href="javascript:void(0);" onclick="myFunction()">
+                <a href="javascript:void(0);" onclick="dropDownFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
