--- a/Mywork.html
+++ b/Mywork.html
@@ -37,7 +37,7 @@
                </div>
             </li>
             <li class="icon">
-                <a href="javascript:void(0);" onclick="myFunction()">
+                <a href="javascript:void(0);" onclick="dropDownFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
@@ -56,6 +56,7 @@
                 <li>Window Presentation Foundation (WPF)</li>
                 <li>Visual Studio</li>
             </ul>
+            <button>Visit</button>
         </div>
         <div>
             <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
