--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
                </div>
             </li>
             <li class="icon">
-                <a href="javascript:void(0);" onclick="myFunction()">
+                <a href="javascript:void(0);" onclick="dropDownFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
             </li>
