added some interaction animations

--- a/Mywork.html
+++ b/Mywork.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Kelsey's Portfolio | Character Manager</title>
 </head>
-<body>
+<body> 
     <header>
       <nav>
         <ul id="menu">
@@ -56,7 +56,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
-                <button>Visit</button>
+                <button><a href="DMTools.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/DMTools/DMTools_encounter_maker.png" alt="">
@@ -86,6 +86,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="Character_Manager.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/characterManager/character_stats.png" alt="">
@@ -113,6 +114,7 @@
                     <li>Unity Game Engine</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="FarmKillPig.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/FarmKillPig/FarmKillPig_dashpng.png" alt="">
@@ -142,6 +144,7 @@
                     <li>jquery</li>
                     <li></li>
                 </ul>
+                <button><a href="Learn_Unity.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/comp266/comp266_desktop01.png" alt="">
@@ -171,6 +174,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="InventoryManager.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/inventoryManager/Inventory_Manager_Orders_Tab.jpg" alt="">
@@ -196,6 +200,7 @@
                 <ul>
                     <li>Processing</li>
                 </ul>
+                <button><a href="PaintApp.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/PaintApp/Image_00.png" alt="">
@@ -219,6 +224,7 @@
                 <ul>
                     <li>Processing</li>
                 </ul>
+                <button><a href="PongClone.html">Visit</a></button>
             </div>
             <div>
                 <img src="" alt="">
@@ -246,6 +252,7 @@
                     <li>Window Presentation Foundation (WPF)</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="AIPython3.html">Visit</a></button>
             </div>
             <div>
                 <img src="" alt="">
@@ -267,6 +274,7 @@
                     <li>Unity Game Engine</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="SpaceInvadersClone.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/SpaceInvadersClone/Image_00.png" alt="">
@@ -290,6 +298,7 @@
                     <li>Unity Game Engine</li>
                     <li>Visual Studio</li>
                 </ul>
+                <button><a href="DonkeyKongClone.html">Visit</a></button>
             </div>
             <div>
                 <img src="img/DonkeyKongClone/Image_00.png" alt="">
