--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         continues to enjoy making small games, bike rides, and 
         playing Volleyball. 
     </p>
-
+    <hr>
+    <h2>Artist Statement</h2>
     <p>
         My journey began in 2016 when I learned about Unity from an 
         online ad for a course on Udemy by GameDev.tv. I had always 
