added back button to projects nav item

--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -22,6 +22,7 @@
                 <span>Projects</span>
                 <div class="dropdown-content">
                     <ul>
+                        <li id="back"><a href=""><img src="img/arrow_back.svg" alt=""></a></li>
                         <li><a href="DMTools.html">DMTools</a></li>
                         <li><a href="Character_Manager.html">PCManager</a></li>
                         <li class="active"><a href="FarmKillPig.html">FKP</a></li>
