--- a/Mywork.html
+++ b/Mywork.html
@@ -8,7 +8,7 @@
     <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Kelsey's Portfolio | Character Manager</title>
+    <title>Kelsey's Portfolio | A Quick Look At My Work</title>
 </head>
 <body> 
     <header>
@@ -22,6 +22,7 @@
             <span>Projects</span>
             <div class="dropdown-content">
               <ul>
+                <li id="back"><a href=""><img src="img/arrow_back.svg" alt=""></a></li>
                 <li><a href="DMTools.html">DMTools</a></li>
                 <li><a href="Character_Manager.html">PCManager</a></li>
                 <li><a href="FarmKillPig.html">FKP</a></li>
