--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -22,6 +22,7 @@
                 <span>Projects</span>
                 <div class="dropdown-content">
                     <ul>
+                        <li id="back"><a href=""><img src="img/arrow_back.svg" alt=""></a></li>
                         <li><a href="DMTools.html">DMTools</a></li>
                         <li class="active"><a href="Character_Manager.html">PCManager</a></li>
                         <li><a href="FarmKillPig.html">FKP</a></li>
@@ -32,7 +33,6 @@
                         <li><a href="AIPython3.html">AI in Python3</a></li>
                         <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
                         <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
-                        <li id="back"><a href="">back</a></li>
                     </ul>
                 </div>
                </div>
