added side nav to project pages w/ links to others

--- a/DMTools.html
+++ b/DMTools.html
@@ -47,6 +47,22 @@
     </nav>
 </header>
   
+<div class="content-left">
+    <h3>Projects</h3>
+    <div id="project_links">
+        <a href="DMTools.html">DMTools</a>
+        <a href="Character_Manager.html">PCManager</a>
+        <a href="FarmKillPig.html">FKP</a>
+        <a href="Learn_Unity.html">Learn Unity</a>
+        <a href="InventoryManager.html">Inventory Manager</a>
+        <a href="PaintApp.html">Painting App</a>
+        <a href="PongClone.html">Pong Clone</a>
+        <a href="AIPython3.html">AI in Python3</a>
+        <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
+        <a href="DonkeyKongClone.html">Donkey Kong Clone</a>
+    </div>
+</div>
+
 <div class="content">
     <h1 class="Title">DM Tools</h1>
     <p>
