--- a/Mywork.html
+++ b/Mywork.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
     <header>
-      <nav>
+      <nav></nav>
         <ul id="menu">
           <li><a href="index.html">About</a></li>
           <li><a href="experience.html">Experience</a></li>
