--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -117,38 +117,28 @@
 </div>
 
 <div id="overlay" class="disable">
-    <div class="row">
-        <button id="close-button" class="right">X</button>
+    <button id="close-button" class="right">X</button>
+
+    <div>
+        <button id="prev">'<'</button>
+        
+        <img id="overlay-img">
+
+        <button id="next">'>'</button>
     </div>
-    <div class="row">
-        <div class="col-1">
-            <button id="prev">
-                '<'
-            </button>
-        </div>
-        <div class="col-9">
-            <img id="overlay-img">
-        </div>
-        <div class="col-1">
-            <button id="next">
-                '>'
-            </button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="current_image_container center">
-            <span class="active-image">.</span> 
-            <span>.</span> 
-            <span>.</span>
-            <span>.</span> 
-            <span>.</span>
-            <span>.</span>
-            <span>.</span> 
-            <span>.</span>
-            <span>.</span> 
-            <span>.</span>
-            <span>.</span>
-        </div>
+
+    <div class="current_image_container center">
+        <span class="active-image">.</span> 
+        <span>.</span> 
+        <span>.</span>
+        <span>.</span> 
+        <span>.</span>
+        <span>.</span>
+        <span>.</span> 
+        <span>.</span>
+        <span>.</span> 
+        <span>.</span>
+        <span>.</span>
     </div>
 </div>
 </body>
