added sections to the details pages for projects

--- a/AIPython3.html
+++ b/AIPython3.html
@@ -78,6 +78,32 @@
             and making sure the user didn't accidently enter in data values that
             would cause errors later in the program. 
         </p>
+        
+        <hr>
+
+        <h3>User Interface Design Process</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Software Design Process</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Putting it All Together</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Next Steps</h3>
+        <p>
+            
+        </p>
+
         <hr>
         <p>development status: <span class="status-complete">Complete</span></p>
     </div>
