--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -65,6 +65,8 @@
 <div class="content">
     <div>
         <h1 class="Title">PCManager</h1>
+
+        <h3>About</h3>
         <p>
             This is a project that I made with WPF. it consists of c# code and
             uses json.net to store data. I created this application because I 
@@ -84,6 +86,32 @@
             The main thing I learnt was the MVVM design pattern, and I was able to
             reinforce what I knew about the SOLID principals.
         </p>
+
+        <hr>
+
+        <h3>User Interface Design Process</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Software Design Process</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Putting it All Together</h3>
+        <p>
+
+        </p>
+
+        <hr>
+        <h3>Next Steps</h3>
+        <p>
+            
+        </p>
+
         <hr>
         <p>development status: <span class="status-complete">Complete</span></p>
     </div>
