--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -80,6 +80,32 @@
       the world depending on weather/location and a day/night cycle for the same purpose 
       (the two systems work together). 
   </p>
+  
+  <hr>
+
+  <h3>User Interface Design Process</h3>
+  <p>
+
+  </p>
+
+  <hr>
+  <h3>Software Design Process</h3>
+  <p>
+
+  </p>
+
+  <hr>
+  <h3>Putting it All Together</h3>
+  <p>
+
+  </p>
+
+  <hr>
+  <h3>Next Steps</h3>
+  <p>
+      
+  </p>
+
   <hr>
 <p>development status: <span class="status-paused">Paused</span></p>
 </div>
