--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -93,6 +93,32 @@
             Use of javascript, I implemented a quizing system, etc.
         </li>
     </ol>
+    
+    <hr>
+
+    <h3>User Interface Design Process</h3>
+    <p>
+
+    </p>
+
+    <hr>
+    <h3>Software Design Process</h3>
+    <p>
+
+    </p>
+
+    <hr>
+    <h3>Putting it All Together</h3>
+    <p>
+
+    </p>
+
+    <hr>
+    <h3>Next Steps</h3>
+    <p>
+        
+    </p>
+
     <hr>
     <p>development status: <span class="status-complete">Complete</span></p>
 </div>
