worked on character_manager details page

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -91,7 +91,39 @@
 
         <h3>User Interface Design Process</h3>
         <p>
+            The design process for this project was very iterative. This was
+            the first project I ever made with WPF, so I did sit down and make
+            a plan. I just started writing C# and XAML to make something.
+            The first page design I made was not function and was definitly
+            not nice to look at.
+        </p>
 
+        <div id="image_row">
+            <img src="img/characterManager/character_stats.png" alt="">
+            <img src="img/characterManager/character_stats.png" alt="">
+            <img src="img/characterManager/character_stats.png" alt="">
+            <img src="img/characterManager/character_stats.png" alt="">
+        </div>
+
+        <p>
+            But at the time the important part was that worked, maybe not well,
+            but it was enough for me to make progress in other areas of the 
+            project. After making progess in other areas I came back to the UI
+            and I was coming back with a plan.
+        
+            My biggest goal with the UI is that the user shouldn't have to
+            scroll up and down to find information they need. The character 
+            stats page is where this was particularly important, there is a 
+            lot of information that needs to be display all at once.
+        </p>
+
+        <p>
+            What I came up with is easy to use and functional, but it still 
+            needed work in terms of looking good. Currently, I am working
+            on another revision of the UI that aims to make more effective 
+            use of the space and increases usability even more. This means
+            more icons, better use of white space, dynamic page sizeing, and
+            more.
         </p>
 
         <hr>
@@ -113,7 +145,7 @@
         </p>
 
         <hr>
-        <p>development status: <span class="status-complete">Complete</span></p>
+        <p>development status: <span class="status-working">In Progress</span></p>
     </div>
 </div>
 
