added detailed content for PCmanager

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -129,7 +129,15 @@
         <hr>
         <h3>Software Design Process</h3>
         <p>
-
+            This came in two parts, originally this project was only scooped 
+            for D&D 5e characters, but I started a playing in a Starfinder 
+            campaign, so I needed to make it more modular.
+        </p>
+        <p>
+            After deciding I didn't want to have different programs for
+            different table-top RPG game systems, I went back to the original 
+            design and looked for a simple (maybe not elegent) way to add
+            support for different types of characters.
         </p>
 
         <hr>
