updates to the left nav

--- a/Character_Manager.html
+++ b/Character_Manager.html
@@ -50,7 +50,7 @@
     <h3>Projects</h3>
     <div id="project_links">
         <a href="DMTools.html">DMTools</a>
-        <a href="Character_Manager.html">PCManager</a>
+        <a class="active" href="Character_Manager.html">PCManager</a>
         <a href="FarmKillPig.html">FKP</a>
         <a href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
@@ -141,6 +141,14 @@
         </p>
 
         <hr>
+
+        <h3>Interaction Design</h3>
+        <p>
+
+        </p>
+
+        <hr>
+
         <h3>Putting it All Together</h3>
         <p>
 
