--- a/DMTools.html
+++ b/DMTools.html
@@ -50,7 +50,7 @@
 <div class="content-left">
     <h3>Projects</h3>
     <div id="project_links">
-        <a href="DMTools.html">DMTools</a>
+        <a class="active" href="DMTools.html">DMTools</a>
         <a href="Character_Manager.html">PCManager</a>
         <a href="FarmKillPig.html">FKP</a>
         <a href="Learn_Unity.html">Learn Unity</a>
