--- a/DonkeyKongClone.html
+++ b/DonkeyKongClone.html
@@ -58,7 +58,7 @@
         <a href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
         <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
-        <a href="DonkeyKongClone.html">Donkey Kong Clone</a>
+        <a class="active" href="DonkeyKongClone.html">Donkey Kong Clone</a>
     </div>
 </div>
 
