--- a/FarmKillPig.html
+++ b/FarmKillPig.html
@@ -52,7 +52,7 @@
     <div id="project_links">
         <a href="DMTools.html">DMTools</a>
         <a href="Character_Manager.html">PCManager</a>
-        <a href="FarmKillPig.html">FKP</a>
+        <a class="active" href="FarmKillPig.html">FKP</a>
         <a href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
         <a href="PaintApp.html">Painting App</a>
@@ -81,6 +81,20 @@
       (the two systems work together). 
   </p>
   
+  <hr>
+
+  <h3>Game Design Process</h3>
+  <p>
+
+  </p>
+
+  <hr>
+
+  <h3>Interaction Design</h3>
+  <p>
+
+  </p>
+
   <hr>
 
   <h3>User Interface Design Process</h3>
