--- a/InventoryManager.html
+++ b/InventoryManager.html
@@ -53,7 +53,7 @@
         <a href="Character_Manager.html">PCManager</a>
         <a href="FarmKillPig.html">FKP</a>
         <a href="Learn_Unity.html">Learn Unity</a>
-        <a href="InventoryManager.html">Inventory Manager</a>
+        <a class="active" href="InventoryManager.html">Inventory Manager</a>
         <a href="PaintApp.html">Painting App</a>
         <a href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
