--- a/Learn_Unity.html
+++ b/Learn_Unity.html
@@ -34,7 +34,6 @@
                         <li><a href="AIPython3.html">AI in Python3</a></li>
                         <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
                         <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
-                        <li id="back"><a href="">back</a></li>
                     </ul>
                 </div>
                </div>
@@ -54,7 +53,7 @@
         <a href="DMTools.html">DMTools</a>
         <a href="Character_Manager.html">PCManager</a>
         <a href="FarmKillPig.html">FKP</a>
-        <a href="Learn_Unity.html">Learn Unity</a>
+        <a class="active" href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
         <a href="PaintApp.html">Painting App</a>
         <a href="PongClone.html">Pong Clone</a>
@@ -98,25 +97,25 @@
 
     <h3>User Interface Design Process</h3>
     <p>
-
+        To design the UI for this website I chose to look at other similar sites.
+        My thinking was it would be easier for users to figure out the site
+        structure if they where coming from one of those other sites. For example,
+        if you look at the design of <a href="https://www.w3schools.com/">w3schools</a>:
     </p>
-
-    <hr>
-    <h3>Software Design Process</h3>
+    <img style="width: 100%;" src="img/comp266/w3schools.jpg" alt="">
     <p>
-
+        You can imediately see the influence based on the primary nav and 
+        nav on the left hand side. I did however take a different approch to 
+        the responsive design. On w3schools site, the left nav collapses under
+        a hamburger menu, while I collapse the left nav under an edge panel.
     </p>
-
-    <hr>
-    <h3>Putting it All Together</h3>
+    <div class="sideBySideImg">
+        <img src="img/comp266/w3school_hamburger.png" alt="">
+        <img src="img/comp266/edge_panel.jpg" alt="">
+    </div>
     <p>
-
-    </p>
-
-    <hr>
-    <h3>Next Steps</h3>
-    <p>
-        
+        My goal was to craete something that would be familiar for my 
+        target audience.
     </p>
 
     <hr>
