--- a/PongClone.html
+++ b/PongClone.html
@@ -55,7 +55,7 @@
         <a href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
         <a href="PaintApp.html">Painting App</a>
-        <a href="PongClone.html">Pong Clone</a>
+        <a class="active" href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
         <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
         <a href="DonkeyKongClone.html">Donkey Kong Clone</a>
