--- a/PaintApp.html
+++ b/PaintApp.html
@@ -54,7 +54,7 @@
         <a href="FarmKillPig.html">FKP</a>
         <a href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
-        <a href="PaintApp.html">Painting App</a>
+        <a class="active" href="PaintApp.html">Painting App</a>
         <a href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
         <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
