--- a/SpaceInvadersClone.html
+++ b/SpaceInvadersClone.html
@@ -57,7 +57,7 @@
         <a href="PaintApp.html">Painting App</a>
         <a href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
-        <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
+        <a class="active" href="SpaceInvadersClone.html">Space Invaders Clone</a>
         <a href="DonkeyKongClone.html">Donkey Kong Clone</a>
     </div>
 </div>
