added content for paintApp

--- a/PaintApp.html
+++ b/PaintApp.html
@@ -8,7 +8,7 @@
     <script src="scripts/jquery.js"></script>
     <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Kelsey's Portfolio | Inventory Manager</title>
+    <title>Kelsey's Portfolio | Paint App</title>
 </head>
 <body>
 <header>
@@ -64,81 +64,31 @@
 
 <div class="content">
     <div>
-        <h1 class="Title">Inventory Manager</h1>
+        <h1 class="Title">Paint App</h1>
         <p>
-            This is a project I created for one of my classes, Human Computer
-            Interaction. The purpose of this project was to apply what we
-            learned during the course to the design of an application. For
-            me, this meant a simple design that would be easy for the user
-            to navigate, find what they needed to complete tasks, allow for
-            flexibility, and agility. 
+            This is a small painting application made using the Processing
+            programming language. I created this little program because I've
+            wanted to make a painting app for quite a while and finally had a 
+            chance. I chose to use Processing because it gives easy access
+            to drawing graphics to the screen, which was a big win given I
+            wanted to create my own UI elements from scratch. This included
+            buttons, sliders, and text fields.
         </p>
         <p>
-            Another part of the system that was very important was data validation
-            and making sure the user didn't accidently enter in data values that
-            would cause errors later in the program. 
+            Currently the program only has three brushes, but I want to add more
+            and add functionallity for users to create their own brushes.
         </p>
-        
         <hr>
-
-        <h3>User Interface Design Process</h3>
-        <p>
-
-        </p>
-
-        <hr>
-        <h3>Software Design Process</h3>
-        <p>
-
-        </p>
-
-        <hr>
-        <h3>Putting it All Together</h3>
-        <p>
-
-        </p>
-
-        <hr>
-        <h3>Next Steps</h3>
-        <p>
-            
-        </p>
-
-        <hr>
-        <p>development status: <span class="status-complete">Complete</span></p>
+        <p>development status: <span class="status-paused">Paused</span></p>
     </div>
 </div>
 
 <div class="content-right scroller">
     <div class="img-container">
-        <img src="img/inventoryManager/Inventory_Manager_Create_Order_Tab.jpg" 
+        <img src="img/PaintApp/Image_00.png" 
             alt="">    
-        <img src="img/inventoryManager/Inventory_Manager_Create_Order_Tab_Selected_Items_To_Add.jpg" 
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Orders_Tab.jpg" 
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Orders_Tab_View_Orderjpg.jpg" 
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Inventory_Tab.jpg" 
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Inventory_Tab_Create_Item.jpg" 
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Inventory_Tab_Create_New_Item.jpg"
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Inventory_Tab_Remove_Items.jpg"
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Order_Issue_Tab.jpg"
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Order_Issue_Tab_Order_Selected.jpg"
-            alt="">
-        <img src="img/inventoryManager/Inventory_Manager_Order_Issue_Tab_Select_Order.jpg"
-            alt="">
-        <img src="img/inventoryManager/Employees_Tab.jpg"
-            alt="">
-        <img src="img/inventoryManager/Employees_Tab_Create_New_Employee.jpg"
-            alt="">
-        <img src="img/inventoryManager/Employees_Tab_Edit_Employee.jpg"
-            alt="">
+        <img src="img/PaintApp/Image_01.png" 
+            alt="">    
     </div>
 </div>
 
@@ -159,17 +109,6 @@
     <div class="current_image_container center">
         <span class="active-image">.</span> 
         <span>.</span> 
-        <span>.</span>
-        <span>.</span> 
-        <span>.</span>
-        <span>.</span>
-        <span>.</span> 
-        <span>.</span>
-        <span>.</span> 
-        <span>.</span>
-        <span>.</span>
-        <span>.</span>
-        <span>.</span>
         <span>.</span>
     </div>
 </div>
