--- a/DMTools.html
+++ b/DMTools.html
@@ -30,10 +30,10 @@
                         <li><a href="Learn_Unity.html">Learn Unity</a></li>
                         <li><a href="InventoryManager.html">Inventory Manager</a></li>
                         <li><a href="PaintApp.html">Painting App</a></li>
-                        <li><a href="PongClone.html">Pong Clone</a></li>
+                        <!-- <li><a href="PongClone.html">Pong Clone</a></li>
                         <li><a href="AIPython3.html">AI in Python3</a></li>
                         <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
-                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
+                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li> -->
                     </ul>
                 </div>
                </div>
@@ -56,10 +56,10 @@
         <a href="Learn_Unity.html">Learn Unity</a>
         <a href="InventoryManager.html">Inventory Manager</a>
         <a href="PaintApp.html">Painting App</a>
-        <a href="PongClone.html">Pong Clone</a>
+        <!-- <a href="PongClone.html">Pong Clone</a>
         <a href="AIPython3.html">AI in Python3</a>
         <a href="SpaceInvadersClone.html">Space Invaders Clone</a>
-        <a href="DonkeyKongClone.html">Donkey Kong Clone</a>
+        <a href="DonkeyKongClone.html">Donkey Kong Clone</a> -->
     </div>
 </div>
 
@@ -160,8 +160,10 @@
 </div>
 
 <div id="overlay" class="disable">
-    <button id="close-button" class="right">X</button>
-    <div >
+    <div>
+        <button id="close-button" class="right">X</button>
+    </div>
+    <div id="temp">
         <button id="prev">
             '<'
         </button>
