--- a/Mywork.html
+++ b/Mywork.html
@@ -29,10 +29,10 @@
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
                 <li><a href="InventoryManager.html">Inventory Manager</a></li>
                 <li><a href="PaintApp.html">Painting App</a></li>
-                <li><a href="PongClone.html">Pong Clone</a></li>
+                <!-- <li><a href="PongClone.html">Pong Clone</a></li>
                 <li><a href="AIPython3.html">AI in Python3</a></li>
                 <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
-                <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
+                <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li> -->
               </ul>
             </div>
           </div>
@@ -218,7 +218,7 @@
 
         <hr>
 
-        <div class="project_piece">
+        <!-- <div class="project_piece">
             <div>
                 <a class="Title" href="">Pong Clone</a>
                 <h3>technologies used</h3>
@@ -312,7 +312,7 @@
             </div>
         </div>
 
-        <hr>
+        <hr> -->
     </div>
 </body>
 </html>
