--- a/Mywork.html
+++ b/Mywork.html
@@ -18,7 +18,7 @@
           <li><a href="experience.html">Experience</a></li>
           <li class="active"><a href="Mywork.html">A Quick Look At My Work</a></li>
           <li>
-          <div class="dropdown">
+          <!-- <div class="dropdown">
             <span>Projects</span>
             <div class="dropdown-content">
               <ul>
@@ -29,13 +29,13 @@
                 <li><a href="Learn_Unity.html">Learn Unity</a></li>
                 <li><a href="InventoryManager.html">Inventory Manager</a></li>
                 <li><a href="PaintApp.html">Painting App</a></li>
-                <!-- <li><a href="PongClone.html">Pong Clone</a></li>
+                <li><a href="PongClone.html">Pong Clone</a></li>
                 <li><a href="AIPython3.html">AI in Python3</a></li>
                 <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
-                <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li> -->
+                <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
               </ul>
             </div>
-          </div>
+          </div> -->
           </li>
           <li class="icon">
               <a href="javascript:void(0);" onclick="dropDownFunction()">
@@ -47,6 +47,35 @@
     </header>
 
     <div class="content">
+        <div class="project_piece">
+            <div>
+                <a class="Title" href="Character_Manager.html">PCManager</a>
+                <h3>technologies used</h3>
+                <ul>
+                    <li>C#</li>
+                    <li>XAML</li>
+                    <li>Window Presentation Foundation (WPF)</li>
+                    <li>Visual Studio</li>
+                </ul>
+                <button><a href="Character_Manager.html">Visit</a></button>
+            </div>
+            <div>
+                <img src="img/characterManager/character_stats.png" alt="">
+            </div>
+            <div>
+                <h3>About</h3>
+                <p>
+                    A desktop application that runs on Windows, it's purpose is
+                    to manage characters in table top RPGs. In its current state,
+                    there is support for Dungeons & Dragons 5e and
+                    Starfinder characters. Features in the program include, creating
+                    characters, taking notes, managing inventory, a spellbook, and more!
+                </p>
+            </div>
+        </div>
+
+        <hr>
+
         <div class="project_piece">
             <div>
                 <a class="Title" href="DMTools.html">DMTools</a>
@@ -79,35 +108,6 @@
 
         <div class="project_piece">
             <div>
-                <a class="Title" href="Character_Manager.html">PCManager</a>
-                <h3>technologies used</h3>
-                <ul>
-                    <li>C#</li>
-                    <li>XAML</li>
-                    <li>Window Presentation Foundation (WPF)</li>
-                    <li>Visual Studio</li>
-                </ul>
-                <button><a href="Character_Manager.html">Visit</a></button>
-            </div>
-            <div>
-                <img src="img/characterManager/character_stats.png" alt="">
-            </div>
-            <div>
-                <h3>About</h3>
-                <p>
-                    A desktop application that runs on Windows, it's purpose is
-                    to manage characters in table top RPGs. In its current state,
-                    there is support for Dungeons & Dragons 5e and
-                    Starfinder characters. Features in the program include, creating
-                    characters, taking notes, managing inventory, a spellbook, and more!
-                </p>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="project_piece">
-            <div>
                 <a class="Title" href="FarmKillPig.html">FKP</a>
                 <h3>technologies used</h3>
                 <ul>
@@ -128,6 +128,10 @@
                     goal is to survive as many waves as they can on five different
                     levels, all with their own unique enemies. There are a variety
                     of different weapon types and shooting mechanics.
+                </p>
+                <p>
+                    This project contains many different system, this includes a
+                    extendabel/modular weapon system, weather, day/night cycle, etc.
                 </p>
             </div>
         </div>
