--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
             <li  class="active"><a href="experience.html">Experience</a></li>
             <li><a href="Mywork.html">A Quick Look At My Work</a></li>
             <li>
-               <div class="dropdown">
+               <!-- <div class="dropdown">
                 <span>Projects</span>
                 <div class="dropdown-content">
                     <ul>
@@ -30,13 +30,13 @@
                         <li><a href="Learn_Unity.html">Learn Unity</a></li>
                         <li><a href="InventoryManager.html">Inventory Manager</a></li>
                         <li><a href="PaintApp.html">Painting App</a></li>
-                        <!-- <li><a href="PongClone.html">Pong Clone</a></li>
+                        <li><a href="PongClone.html">Pong Clone</a></li>
                         <li><a href="AIPython3.html">AI in Python3</a></li>
                         <li><a href="SpaceInvadersClone.html">Space Invaders Clone</a></li>
-                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li> -->
+                        <li><a href="DonkeyKongClone.html">Donkey Kong Clone</a></li>
                     </ul>
                 </div>
-               </div>
+               </div> -->
             </li>
             <li class="icon">
                 <a href="javascript:void(0);" onclick="dropDownFunction()">
@@ -55,6 +55,26 @@
         stack, Mongo DB, Expressjs, Angular, and Node.js. The site need some
         public pages that where about the company, but they also need some
         private pages for internal use.
+    </p>
+
+    <hr>
+
+    <h1 class="Title">Personal</h1>
+    <p>
+        During my free time I do like to write my own software, and have worked
+        with the Unity game engine for about 5 years now and by extent C#. I 
+        have also worked with WPF to make desktop applications. These personal 
+        projects are where I have gotten the bulk of my experience. 
+    </p>
+    <p>
+        Projects that are worth noting are D&D PC manager (WPF), D&D Campaign/encounter 
+        tracker (WPF), a 2D topdown shooter (Unity), and Rougelike, Rager, Platformer (Unity).
+
+    </p>
+    <p>
+        I also took it upon myself to learn Android Studio, for this I took a
+        course on <a href="https://www.udemy.com/">Udemy</a> and later started
+        work on a mobile application for Dungeions & Dragons character management. 
     </p>
 
     <hr>
@@ -113,23 +133,6 @@
             optimize it.
         </li>
     </ol>
-
-    <hr>
-
-    <h1 class="Title">Personal</h1>
-    <p>
-        During my free time I do like to write my own software, and have worked
-        with the Unity game engine for about 5 years now and by extent C#. I 
-        have also worked with WPF to make two Windows applications. These personal 
-        projects are where I have gotten the bulk of my experience. It was while 
-        making game in Unity that I learned of many different design patterns while
-        I learned about architectural patterens working with WPF.
-    </p>
-    <p>
-        I also took it upon myself to learn Android Studio, for this I took a
-        course on <a href="https://www.udemy.com/">Udemy</a> and later started
-        work on a mobile application for Dungeions & Dragons character management. 
-    </p>
 </div>
     
 </body>
